# twin-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.ollama  Dockerfile.slackbot  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  PLAN.md  SLACK_TASK.md  env_sample.md
llm/: Modelfile  Modelfile.searching  build-image.sh  build-searching-image.sh
scripts/: run-ollama.sh  start-webapp.sh  webapp-console.sh  webapp-makemigrations.sh  webapp-migrate.sh  webapp-sh.sh
slackbot/: bot.py
src/db/: chroma_tool.py  data_tool.py  schema.py
src/llm/: llm_api.py
src/persona/: prompt_engineering.py  prompt_templates.py
src/rag/: retriever.py
src/server/: api_server.py
src/slackbot/: bot.py
tests/: test_chroma_tool.py  test_db_data_tool.py  test_db_schema.py  test_llm_api.py  test_prompt_engineering.py  test_rag_retriever.py
twin_ai_webapp/agent/services/: rag_service.py
twin_ai_webapp/agent/utils/: __init__.py  chroma_tool.py  prompt_engineering.py  prompt_templates.py
twin_ai_webapp/api/: urls.py  views.py
twin_ai_webapp/config/: asgi.py  urls.py  wsgi.py
twin_ai_webapp/config/settings/: base.py
twin_ai_webapp/document/: admin.py
twin_ai_webapp/document/migrations/: 0001_initial.py  0002_obsidianfile_document_obsidian_file.py
twin_ai_webapp/document/models/: __init__.py  conervation.py  document.py  obsidian_file.py  pdf_file.py
twin_ai_webapp/document/services/: __init__.py  pdf_document_service.py  sync_obsidian_file_service.py
